--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -1,14 +1,14 @@
 iserver {
 	listen 80;
-	server_name SITENAME;
+	server_name __SITENAME__;
 
 	location /static {
-		alias ROOT/sites/SITENAME/static;
+		alias __ROOT__/sites/__SITENAME__/static;
 	}
 
 	location / {
 		proxy_set_header Host $host;
-		proxy_pass http://unix:/tmp/SITENAME.socket;
+		proxy_pass http://unix:/tmp/__SITENAME__.socket;
 	}
 }
 
